Added gesture controlled music player
- Uses any pose to start music

--- a/MyoWnBand/index.html
+++ b/MyoWnBand/index.html
@@ -15,7 +15,7 @@
 		</div>
 		
 		<div class='song'>
-			<audio src="blinkWhatsMyAgeAgain.mp3" controls></audio>		
+			<audio src="blinkWhatsMyAgeAgain.mp3" id="blink182" controls></audio>		
 		</div>
 		
 		<div class='poseContainer'>
